# x86-emu

./: Cargo.toml  LICENSE  README.md  hello
file_loader/: Cargo.toml
file_loader/src/: elf.rs  lib.rs
processor/: Cargo.toml
processor/src/: lib.rs
processor/src/amd64/: interp.rs
syscall/: Cargo.toml
x86_emu/: Cargo.toml
x86_emu/src/: main.rs
