[package]
name = "processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
file_loader = { path = "../file_loader" }
bitflags = "1.3.2" # Used in amd64::interp
bytemuck = { version = "1.7.3", features = ["derive", "min_const_generics"] }
